add model and video processing file, update reqs and gitignore

--- a/ML/model.ipynb
+++ b/ML/model.ipynb
@@ -1,100 +1,151 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import openai\n",
     "from openai import OpenAI\n",
-    "client = OpenAI()"
+    "import os\n",
+    "import base64\n",
+    "import requests\n",
+    "from key import OPENAI_API_KEY\n",
+    "\n",
+    "api_key=OPENAI_API_KEY\n",
+    "client = OpenAI(api_key=api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = client.chat.completions.create(\n",
-    "  model=\"gpt-4o\",\n",
-    "  messages=[\n",
-    "    {\n",
-    "      \"role\": \"user\",\n",
-    "      \"content\": [\n",
-    "        {\"type\": \"text\", \"text\": \"What’s in this image?\"},\n",
-    "        {\n",
-    "          \"type\": \"image_url\",\n",
-    "          \"image_url\": {\n",
-    "            \"url\": \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\",\n",
-    "          },\n",
-    "        },\n",
-    "      ],\n",
-    "    }\n",
-    "  ],\n",
-    "  max_tokens=300,\n",
-    ")"
+    "# Function to encode the image\n",
+    "def encode_image(image_path):\n",
+    "    with open(image_path, \"rb\") as image_file:\n",
+    "        return base64.b64encode(image_file.read()).decode('utf-8')\n",
+    "\n",
+    "def list_files(directory):\n",
+    "    file_list = []\n",
+    "    for root, dirs, files in os.walk(directory):\n",
+    "        for file in files:\n",
+    "            file_list.append(os.path.join(root, file))\n",
+    "    return file_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get System Prompt\n",
+    "f = open(\"prompt.txt\", \"r\")\n",
+    "prompt_text = f.read()\n",
+    "\n",
+    "# Get User Input\n",
+    "user_input = \"1. Dunks 2. Crossovers\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all the image paths\n",
+    "directory = './frames'  # When you run video.py, all the frames located inside frames folder\n",
+    "image_paths = list_files(directory)\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "# Iterate through each image path\n",
+    "for image_path in image_paths:\n",
+    "    # Getting the base64 string\n",
+    "    base64_image = encode_image(image_path)\n",
+    "\n",
+    "    headers = {\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Authorization\": f\"Bearer {api_key}\"\n",
+    "    }\n",
+    "\n",
+    "    payload = {\n",
+    "        \"model\": \"gpt-4o\",\n",
+    "        \"messages\": [\n",
+    "            {\"role\": \"system\", \"content\": prompt_text},\n",
+    "            {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": user_input}, {\"type\": \"image_url\",\"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\", \"detail\": \"low\"}}]}\n",
+    "            # user_input text can be removed\n",
+    "        ],\n",
+    "        \"max_tokens\": 300\n",
+    "    }\n",
+    "\n",
+    "    # Make the API request\n",
+    "    response = requests.post(\"https://api.openai.com/v1/chat/completions\", headers=headers, json=payload)\n",
+    "\n",
+    "    # Append the result to the list\n",
+    "    results.append(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'chatcmpl-9cy7XZE3AGh4Rr4LhmP3AQWOnZ8QD',\n",
+       " 'object': 'chat.completion',\n",
+       " 'created': 1719074595,\n",
+       " 'model': 'gpt-4o-2024-05-13',\n",
+       " 'choices': [{'index': 0,\n",
+       "   'message': {'role': 'assistant',\n",
+       "    'content': 'Player in white jersey driving towards the basket past a defender in a teal jersey'},\n",
+       "   'logprobs': None,\n",
+       "   'finish_reason': 'stop'}],\n",
+       " 'usage': {'prompt_tokens': 208, 'completion_tokens': 15, 'total_tokens': 223},\n",
+       " 'system_fingerprint': 'fp_9cb5d38cf7'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Result Sample\n",
+    "results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The image depicts a beautiful outdoor landscape featuring a wooden boardwalk that stretches through a field of tall, lush green grass. The sky above is clear with a few wispy clouds, and the scene has a peaceful, serene atmosphere. The boardwalk leads to a horizon lined with trees and bushes. The overall setting looks natural and inviting, suggesting a nature reserve or park.\n"
+      "Player in white jersey driving towards the basket past a defender in a teal jersey\n",
+      "Player in a white jersey performing a crossover move to get past a defender in a blue jersey near the three-point line, crowd in background\n",
+      "Player in a white jersey dunking the ball while a player in a turquoise jersey lies on the ground under the rim, and the crowd and bench react energetically\n"
      ]
     }
    ],
    "source": [
-    "print(response.choices[0].message.content)"
+    "# Iterate through all the results\n",
+    "for i in range(len(image_paths)):\n",
+    "    print(results[i]['choices'][0]['message']['content'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "response = client.images.generate(\n",
-    "  model=\"dall-e-3\",\n",
-    "  prompt=\"a man with big moustache and wearing long hat\",\n",
-    "  size=\"1024x1024\",\n",
-    "  quality=\"standard\",\n",
-    "  n=1,\n",
-    ")\n",
-    "\n",
-    "image_url = response.data[0].url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://oaidalleapiprodscus.blob.core.windows.net/private/org-kpMP6TJMcu4k3RDlV6xZvSel/user-PNiokke6SCuyZHSV6IsdSjud/img-sNseSIaudZBOyVQ3dvhinP9C.png?st=2024-06-21T15%3A37%3A14Z&se=2024-06-21T17%3A37%3A14Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-06-20T23%3A47%3A17Z&ske=2024-06-21T23%3A47%3A17Z&sks=b&skv=2023-11-03&sig=gdJPW3l7d8AH/DoSwU9p5Vhi5/XDMJ2sR/gJ1PZJCsE%3D'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_url"
+    "Just a short introduction to process images using gpt-4o, still a bad result, definitely need to change the prompt"
    ]
   }
  ],
