update audio notebook and video.py

--- a/ML/model.ipynb
+++ b/ML/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "        \"model\": \"gpt-4o\",\n",
     "        \"messages\": [\n",
     "            {\"role\": \"system\", \"content\": prompt_text},\n",
-    "            {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": user_input}, {\"type\": \"image_url\",\"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\", \"detail\": \"low\"}}]}\n",
+    "            {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": user_input}, {\"type\": \"image_url\",\"image_url\": {\"url\": f\"data:image/jpg;base64,{base64_image}\", \"detail\": \"low\"}}]}\n",
     "            # user_input text can be removed\n",
     "        ],\n",
     "        \"max_tokens\": 300\n",
@@ -91,26 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 'chatcmpl-9cy7XZE3AGh4Rr4LhmP3AQWOnZ8QD',\n",
+       "{'id': 'chatcmpl-9cyl2tV3uUnsbNNrEoBWZKemkNSOM',\n",
        " 'object': 'chat.completion',\n",
-       " 'created': 1719074595,\n",
+       " 'created': 1719077044,\n",
        " 'model': 'gpt-4o-2024-05-13',\n",
        " 'choices': [{'index': 0,\n",
        "   'message': {'role': 'assistant',\n",
-       "    'content': 'Player in white jersey driving towards the basket past a defender in a teal jersey'},\n",
+       "    'content': 'Player in white uniform dunking the basketball, surrounded by players in teal uniforms'},\n",
        "   'logprobs': None,\n",
        "   'finish_reason': 'stop'}],\n",
        " 'usage': {'prompt_tokens': 208, 'completion_tokens': 15, 'total_tokens': 223},\n",
        " 'system_fingerprint': 'fp_9cb5d38cf7'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,31 +122,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player in white jersey driving towards the basket past a defender in a teal jersey\n",
-      "Player in a white jersey performing a crossover move to get past a defender in a blue jersey near the three-point line, crowd in background\n",
-      "Player in a white jersey dunking the ball while a player in a turquoise jersey lies on the ground under the rim, and the crowd and bench react energetically\n"
+      "1 :  Player in white uniform dunking the basketball, surrounded by players in teal uniforms\n",
+      "2 :  Player in white jersey attempts a dunk while defended by players in teal jerseys, with crowd in the background\n",
+      "3 :  Player in white jersey executes a dunk while players in blue-green jerseys fall to the floor, and the crowd celebrates in the background\n",
+      "4 :  Player performing a dunk while two defenders look on\n",
+      "5 :  A player in a gray jersey mid-air dunking the ball while other players watch from the ground and the court\n",
+      "6 :  Player in yellow and blue jersey dunking the ball in the basketball game\n",
+      "7 :  Player in yellow and blue uniform dunking the basketball aggressively over a player in white, with teammates and spectators in the background\n",
+      "8 :  Player in a yellow jersey performing a dunk while opposing team members in white jerseys attempt to defend\n",
+      "9 :  Player in dark uniform dunking the basketball while players in yellow uniforms attempt to defend\n",
+      "10 :  Player in a yellow jersey dunking the basketball, with a player in a black jersey attempting to defend\n",
+      "11 :  Player in yellow jersey performing a slam dunk near the basket, surrounded by players in black jerseys\n",
+      "12 :  A player in a white jersey is performing a slam dunk with several defenders around him on a crowded basketball court\n",
+      "13 :  Basketball player in white jersey celebrating as the scoreboard shows GSW leads DAL 91-83 in the fourth quarter with 6:38 remaining.\n",
+      "14 :  Player in yellow performing a crossover dribble near the three-point line with a defender closely guarding\n",
+      "15 :  A player in a yellow jersey is about to dunk the basketball while his opponents run back on defense.\n",
+      "16 :  Player in yellow uniform driving towards the basket while being pursued by two players in gray uniforms\n",
+      "17 :  Player in dark jersey performing a slam dunk, while others look on\n",
+      "18 :  Player performs a dunk near the basket as spectators and players watch eagerly\n",
+      "19 :  Player in a navy jersey mid-air dunking the basketball with several players and a crowd in the background\n",
+      "20 :  Player in white jersey performing a dunk over a player in blue jersey\n",
+      "21 :  Player in a white jersey performing a dunk surrounded by opposing players in blue jerseys, with spectators cheering in the background\n",
+      "22 :  Player in blue jersey dunking the basketball while a defender falls to the ground\n",
+      "23 :  Player in the white jersey executes a crossover on the player in the red jersey at the top of the key, while teammates and opponents prepare for potential rebounds or passes.\n",
+      "24 :  Players on a basketball court with one player attempting a shot near the hoop while other players surround him\n",
+      "25 :  Player in gray jersey performs a crossover move against a defender in a red jersey on a basketball court\n",
+      "26 :  Player in gray dunking over several players in red jerseys while the crowd watches closely\n",
+      "27 :  Basketball player in gray jersey making a fadeaway jump shot while defenders in red jerseys attempt to guard him\n",
+      "28 :  Players celebrating on the basketball court after a game\n",
+      "29 :  A basketball player in a yellow jersey breaks away towards the hoop as the crowd watches intently\n",
+      "30 :  Player in yellow attempts a three-point shot while being guarded by several players in black uniforms, with the scoreboard showing 116-113 in favor of the black team\n",
+      "31 :  Player in yellow jersey number 0 celebrating near the sideline with a visible score of 116 to 116 and 0.4 seconds on the clock\n",
+      "32 :  Basketball player in a blue uniform dunking the ball into the hoop while other players watch.\n",
+      "33 :  A player in a blue jersey dribbling past a defender wearing a white jersey\n",
+      "34 :  Player in navy jersey performing a crossover dribble against a defender in a white jersey numbered 6 near the sideline\n",
+      "35 :  Basketball player in a white jersey dunking the ball over an opponent in a red jersey\n",
+      "36 :  Player in red passing the ball to a teammate at the three-point line while a defender in white is closely guarding him on court.\n",
+      "37 :  Basketball players on the bench wearing \"Nets\" jerseys, reacting excitedly to the game\n",
+      "38 :  Player in a white jersey dribbling the ball and performing a crossover move with a defender in a red jersey attempting to guard them\n",
+      "39 :  Player in a red jersey lying on the court while other players stand around\n",
+      "40 :  Player in white jersey dribbling near the three-point line, opposing player in black jersey fallen on the floor\n",
+      "41 :  Player in a dark jersey number 23 dribbling at the top of the key, while another player in a dark jersey number 25 defends him\n",
+      "42 :  A basketball player in a white Dallas Mavericks uniform with the number 77 on the court\n",
+      "43 :  Player in black jersey mid-air dunking the ball with defenders in red jerseys around the basket\n",
+      "44 :  Player in a red jersey performing a fast break dunk ahead of the buzzer, with spectators and officials in the background\n",
+      "45 :  A basketball player in a red uniform driving towards the basket while dribbling the ball\n",
+      "46 :  Basketball player in red jersey with number 1 standing on the court\n",
+      "47 :  Player in a light blue uniform dribbling past defensive players in dark uniforms in a basketball game\n",
+      "48 :  Player in white uniform performing a crossover move against a defender in a dark uniform near the three-point line.\n",
+      "49 :  Fast break play happening with multiple players running towards the basket, large crowd in the background\n",
+      "50 :  Player in a navy jersey performing a layup with defenders in white jerseys chasing him\n",
+      "51 :  Basketball players from opposing teams on the court during a game, with the scoreboard showing the Lakers leading 63-60 against the Blazers in the second quarter\n",
+      "52 :  Player in teal jersey performing a dunk while surrounded by players in yellow jerseys on a basketball court\n",
+      "53 :  Player in black jersey mid-air dunking the basketball while player in yellow jersey watches\n",
+      "54 :  Player in blue is dribbling the ball on the court, with defending players approaching. The scoreboard shows a tie.\n",
+      "55 :  Player in white uniform dunking the basketball while players in purple and white stand near the basket\n",
+      "56 :  Player wearing a purple jersey celebrating on the court with the crowd cheering in the background\n",
+      "57 :  Player in white uniform executes a dunk while being defended by a player in a blue uniform near the basket\n",
+      "58 :  Player in white dribbling the ball up the court while being guarded by a player in blue. Washington Wizards logo and score visible on the court.\n",
+      "59 :  Player dunking the basketball in a game.\n",
+      "60 :  A basketball player executing a dunk with the ball passing through the hoop\n",
+      "61 :  Player in a white uniform dribbling past a defender who has fallen, with surrounding players and audience watching attentively\n",
+      "62 :  Basketball player in green performing a crossover move against an opponent in white\n",
+      "63 :  A basketball player from the Minnesota team performing a layup near the hoop\n",
+      "64 :  A player in black uniform driving towards the basket with an opponent in white uniform closely defending, court crowded with players and fans intensely watching\n",
+      "65 :  Player in green attempts a three-point shot with defenders closing in, crowd watching intensely\n",
+      "66 :  Player mid-air near the basket for a dunk, surrounded by defenders\n",
+      "67 :  A player in a dark jersey dunking the basketball while surrounded by opponents in white jerseys as the crowd cheers in the background\n",
+      "68 :  A basketball player in a black jersey celebrating on the court with another person in a green jacket\n",
+      "69 :  Basketball player dribbling down the court as time expires with defenders trailing\n",
+      "70 :  Team in orange jerseys celebrating on the court with fans standing and cheering in the background\n",
+      "71 :  Player in an orange jersey jumping towards the hoop, about to dunk the basketball\n",
+      "72 :  A basketball player in a light blue jersey dribbles the ball and performs a crossover move past a defender from the opposing team in black jerseys, while spectators watch from the stands.\n",
+      "73 :  Player in light blue jersey performs a crossover against a defender in a dark jersey near the top of the key\n",
+      "74 :  Player in a black jersey jumps toward the hoop for a dunk as defenders look on, with a crowded audience in the background\n",
+      "75 :  Players and fans celebrating on the court with a scoreboard showing BOS 64 and GS 84\n",
+      "76 :  A basketball player is making a three-point shot while five defenders are near the basket, and the crowd watches intently.\n",
+      "77 :  Basketball player executing a layup attempt as defenders try to block the shot, with a crowded audience in the background\n",
+      "78 :  Player in white uniform shooting a three-point shot as time expires, with the scoreboard showing a score of 72-74 and 0.0 seconds left in the third quarter.\n",
+      "79 :  A basketball player wearing a yellow jersey is performing a slam dunk while other players and the audience watch.\n",
+      "80 :  A player attempts a three-point shot at the buzzer, with spectators in the arena watching intently\n",
+      "81 :  Player attempting a dunk near the basket during a basketball game, with some defenders in blue jerseys jumping to contest the shot\n",
+      "82 :  Player in white jersey driving towards the basket and dunking the ball with both hands\n",
+      "83 :  Player in pink jersey performing a one-handed dunk during a basketball game, other players are watching.\n",
+      "84 :  Player in pink jersey dunking over a defender in white jersey while other players and officials observe\n",
+      "85 :  A player holding the ball prepares to pass while defenders and teammates look on during a game.\n",
+      "86 :  A player in a white jersey is performing a mid-air dunk while being closely trailed by a player in a black jersey. Two other players in white jerseys and an official observe the action.\n",
+      "87 :  Player in white jersey driving towards the basket with a defender attempting to block the path\n",
+      "88 :  A player in a white jersey is jumping to dunk the basketball while another player in a black jersey attempts to block the shot\n",
+      "89 :  Player in a white jersey executing a dunk while a player in a black jersey attempts to block, with the scoreboard showing DAL 71 and UTA 58\n",
+      "90 :  A player in a white uniform is performing a dunk over a defender in a black uniform in a crowded arena\n",
+      "91 :  Player wearing a white jersey dunking a basketball while other players look on\n",
+      "92 :  Player in green dunking the basketball over a player in white with the crowd in the background\n",
+      "93 :  Crowd watching as the 76ers and Raptors players compete with referees observing in overtime\n",
+      "94 :  A player in a blue jersey shoots a three-pointer at the buzzer in a crowded arena, with the score tied at 101 and only 0.7 seconds left in overtime.\n",
+      "95 :  Player dunking a basketball while teammates and crowd look on\n",
+      "96 :  Players in white and green jerseys on a basketball court, with one player in a white jersey dribbling the ball near the three-point line, surrounded by defenders\n",
+      "97 :  Crowd cheers as a player makes a game-winning shot at the buzzer\n",
+      "98 :  Players celebrating on the basketball court, with Robinson (number 23) in the foreground and the score visible on the screen showing Boston 105 and New York 108\n",
+      "99 :  A player dribbling the ball, performing a crossover move near the three-point line as defenders get ready.\n",
+      "100 :  Player in a red jersey performs a driving layup while surrounded by defenders\n",
+      "101 :  Player in a white and red uniform performing a crossover, causing a defender in a black uniform to stumble and fall near the three-point line\n",
+      "102 :  Player in a white jersey dunking the basketball while being chased by a defender in a blue jersey\n",
+      "103 :  A player in a white Lakers uniform driving past a defender in a blue uniform towards the basket for a dunk\n",
+      "\n",
+      "\n",
+      "104 :  A basketball player in a white jersey attempting a crossover against a defender in a light blue jersey\n",
+      "105 :  Player in a black jersey attempts a crossover move on a player in a light blue jersey near the three-point line on a basketball court\n",
+      "106 :  Player in dark uniform performing a slam dunk over opponents in light uniforms\n",
+      "107 :  A basketball player in a white jersey dunking the ball while other players look on\n",
+      "108 :  Player in white jersey lying on the court under the basket after a dunk attempt, with two players in black jerseys nearby\n",
+      "109 :  Player in black jersey celebrates after performing a slam dunk, opposing players in white jerseys on the court\n",
+      "110 :  A basketball player in a white uniform is dunking the ball while surrounded by players in red uniforms\n",
+      "111 :  Player in white jersey dribbling past player in red jersey on a basketball court\n",
+      "112 :  Player in a dark jersey dribbling towards the basket on a fast break, with a defender trailing behind.\n",
+      "113 :  A player from the Orlando team in a black uniform is taking a jump shot.\n",
+      "114 :  A basketball player in a yellow jersey attempting a flying dunk towards the basket\n",
+      "115 :  Basketball court with players and crowd, score shows 82-94 at end of 3rd quarter\n",
+      "116 :  A player in a white jersey is attempting to score with a layup while being closely guarded by a player in a black jersey, with the scoreboard showing Milwaukee leading Boston 108-107 and 11.4 seconds left in the 4th quarter\n",
+      "117 :  Basketball player attempting a three-point shot while defenders are closing in\n",
+      "118 :  Player in black jersey dunking the basketball while several players in white jerseys look on\n",
+      "119 :  Player in white jersey dunking over a defending player in black jersey\n",
+      "120 :  Basketball player in white jersey dunking the ball while a player in black jersey attempts to defend\n",
+      "121 :  Player in white jersey dribbling near the three-point line with defenders approaching, tight game with 5.9 seconds left\n",
+      "122 :  Players from Milwaukee Bucks and Boston Celtics on a basketball court during the final seconds of a game, with Milwaukee leading 110-107\n",
+      "123 :  Players crowd near the basket as a game-winning dunk attempt is unsuccessful in the final seconds of an NBA playoff game between the Milwaukee Bucks and Boston Celtics\n",
+      "124 :  Basketball players and staff walking off the court with a crowd in the background\n",
+      "125 :  Basketball player in a white and green jersey with hands on head looking distressed\n",
+      "126 :  Text reads \"THANKS FOR WATCHING\" and '@KINGSWISHG' with a blurred background of a basketball game.\n"
      ]
     }
    ],
    "source": [
     "# Iterate through all the results\n",
     "for i in range(len(image_paths)):\n",
-    "    print(results[i]['choices'][0]['message']['content'])"
+    "    print(i+1, \": \", results[i]['choices'][0]['message']['content'])"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Just a short introduction to process images using gpt-4o, still a bad result, definitely need to change the prompt"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
