--- a/ML/loudness.ipynb
+++ b/ML/loudness.ipynb
@@ -4,102 +4,66 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting numpy\n",
-      "  Using cached numpy-2.0.0-cp312-cp312-macosx_10_9_x86_64.whl.metadata (60 kB)\n",
-      "Collecting pydub\n",
-      "  Using cached pydub-0.25.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Collecting openai\n",
-      "  Using cached openai-1.35.3-py3-none-any.whl.metadata (21 kB)\n",
-      "Collecting anyio<5,>=3.5.0 (from openai)\n",
-      "  Using cached anyio-4.4.0-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting distro<2,>=1.7.0 (from openai)\n",
-      "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
-      "Collecting httpx<1,>=0.23.0 (from openai)\n",
-      "  Using cached httpx-0.27.0-py3-none-any.whl.metadata (7.2 kB)\n",
-      "Collecting pydantic<3,>=1.9.0 (from openai)\n",
-      "  Using cached pydantic-2.7.4-py3-none-any.whl.metadata (109 kB)\n",
-      "Collecting sniffio (from openai)\n",
-      "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
-      "Collecting tqdm>4 (from openai)\n",
-      "  Using cached tqdm-4.66.4-py3-none-any.whl.metadata (57 kB)\n",
-      "Collecting typing-extensions<5,>=4.7 (from openai)\n",
-      "  Using cached typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting idna>=2.8 (from anyio<5,>=3.5.0->openai)\n",
-      "  Using cached idna-3.7-py3-none-any.whl.metadata (9.9 kB)\n",
-      "Collecting certifi (from httpx<1,>=0.23.0->openai)\n",
-      "  Using cached certifi-2024.6.2-py3-none-any.whl.metadata (2.2 kB)\n",
-      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
-      "  Using cached httpcore-1.0.5-py3-none-any.whl.metadata (20 kB)\n",
-      "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
-      "  Using cached h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
-      "Collecting annotated-types>=0.4.0 (from pydantic<3,>=1.9.0->openai)\n",
-      "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
-      "Collecting pydantic-core==2.18.4 (from pydantic<3,>=1.9.0->openai)\n",
-      "  Using cached pydantic_core-2.18.4-cp312-cp312-macosx_10_12_x86_64.whl.metadata (6.5 kB)\n",
-      "Using cached numpy-2.0.0-cp312-cp312-macosx_10_9_x86_64.whl (20.9 MB)\n",
-      "Using cached pydub-0.25.1-py2.py3-none-any.whl (32 kB)\n",
-      "Using cached openai-1.35.3-py3-none-any.whl (327 kB)\n",
-      "Using cached anyio-4.4.0-py3-none-any.whl (86 kB)\n",
-      "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
-      "Using cached httpx-0.27.0-py3-none-any.whl (75 kB)\n",
-      "Using cached httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
-      "Using cached pydantic-2.7.4-py3-none-any.whl (409 kB)\n",
-      "Using cached pydantic_core-2.18.4-cp312-cp312-macosx_10_12_x86_64.whl (1.8 MB)\n",
-      "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
-      "Using cached tqdm-4.66.4-py3-none-any.whl (78 kB)\n",
-      "Using cached typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
-      "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
-      "Using cached idna-3.7-py3-none-any.whl (66 kB)\n",
-      "Using cached certifi-2024.6.2-py3-none-any.whl (164 kB)\n",
-      "Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
-      "Installing collected packages: pydub, typing-extensions, tqdm, sniffio, numpy, idna, h11, distro, certifi, annotated-types, pydantic-core, httpcore, anyio, pydantic, httpx, openai\n",
-      "Successfully installed annotated-types-0.7.0 anyio-4.4.0 certifi-2024.6.2 distro-1.9.0 h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 idna-3.7 numpy-2.0.0 openai-1.35.3 pydantic-2.7.4 pydantic-core-2.18.4 pydub-0.25.1 sniffio-1.3.1 tqdm-4.66.4 typing-extensions-4.12.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install numpy pydub openai\n"
+    "from pydub import AudioSegment\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import math\n",
+    "import moviepy.editor as mp\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joankadevi/Documents/GitHub/tiktok-techjam-be/ENV_NAME/lib/python3.12/site-packages/pydub/utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "import openai\n",
-    "from pydub import AudioSegment\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import math\n"
+    "# Explicitly set the path for ffmpeg and ffprobe\n",
+    "os.environ['PATH'] += os.pathsep + '/usr/local/bin'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Writing audio in ./audio/audio.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                        "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
+     ]
+    }
+   ],
    "source": [
-    "openai.api_key = 'sk-proj-Z2GzmdZdty67aUK03t5ST3BlbkFJ6EcLE6Zd0dDepxYkHdF3'\n"
+    "# Convert video to audio\n",
+    "video_file_path = \"./download/ulfJXy4QptQ.mp4\"\n",
+    "audio_file_path = \"./audio/audio.mp3\"\n",
+    "clip = mp.VideoFileClip(video_file_path)\n",
+    "clip.audio.write_audiofile(audio_file_path)"
    ]
   },
   {
@@ -108,22 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#explicitly set the path for ffmpeg and ffprobe\n",
-    "os.environ['PATH'] += os.pathsep + '/usr/local/bin'\n"
+    "# audio_file_path = '/Users/joankadevi/Downloads/testingloudness.m4a'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio_file_path = '/Users/joankadevi/Downloads/testingloudness.m4a'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loudest timeframes (in seconds): [(6.0, 7.0), (1.0, 2.0), (5.0, 6.0), (2.0, 3.0), (3.0, 4.0), (4.0, 5.0), (7.0, 8.0), (0.0, 1.0)]\n"
+      "Loudest timeframes (in seconds): [(4.0, 5.0), (5.0, 6.0), (401.0, 402.0), (435.0, 436.0), (171.0, 172.0), (166.0, 167.0), (190.0, 191.0), (436.0, 437.0), (406.0, 407.0), (247.0, 248.0)]\n"
      ]
     }
    ],
@@ -187,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
